# paav-assignments

./: README.md
1-clustering/: .gitignore  CMakeLists.txt  README.md  REPORT.md  driver.bash  params.json
1-clustering/include/: Renderer.hpp  params.hpp  tree_utilities.hpp  utils.hpp
1-clustering/src/: Renderer.cpp  cluster_extraction.cpp
2-kalman-filter/: CMakeLists.txt  README.md  driver.bash
2-kalman-filter/demo/: main.cpp
2-kalman-filter/include/: CloudManager.h  logger.hpp
2-kalman-filter/include/tracker/: KalmanFilter.h  Tracker.h  Tracklet.h
2-kalman-filter/include/viewer/: Renderer.h
2-kalman-filter/src/: CloudManager.cpp
2-kalman-filter/src/tracker/: KalmanFilter.cpp  Tracker.cpp  Tracklet.cpp
2-kalman-filter/src/viewer/: Renderer.cpp
3-particle-filter/: .gitignore  README.md  build_run.sh  plotter.py  res.txt
3-particle-filter/results/: 2.initial_guess_nearest_neigh.txt  4.initial_guess_hungarian_more_variance.txt
3-particle-filter/src/particle/: CMakeLists.txt
3-particle-filter/src/particle/include/particle/: helper_functions.h  map.h  particle_filter.h
3-particle-filter/src/particle/src/: hungarian.cpp  main.cpp  particle_filter.cpp
3-particle-filter/src/results/: 1.random_nearest_neigh.txt  3.initial_guess_hungarian.txt  initial_guess_hungarian_stratified_resampling.txt
4-vehicles-modeling/: main.py  simulation.py
5-controls/: cubic_spline_planner.py  main.py  mpc.py  oval_trj.txt  pid.py  purepursuit.py  simulation.py  stanley.py
6-planning/: cProfile.out  cProfile.txt  cubic_spline_planner.py  frenet_optimal_trajectory.py  main.py  params.py  simulation.py  stanley.py
